
- two/axisymmetric can convert some 2D grids into axi-symmetric grids
  (with many caveats)

Tue Apr 17, 2012 : Released Refine 1.8.5

- use autoconf standard FC_FUNC and FC_FUNC_ macros to name mangle
    fortran interfaces
- use config.h to define FC_FUNC_ (for xlf and xlc)

Thu Feb 16, 2012 : Released Refine 1.8.4

- towards eliminating the creatation of "collapsed cells", tets with 
  more then one boundary face: do not collapse if either node is frozen 
  (80768c4). added a cost constraint for tets with more then one 
  boundary face (2566eb8,b24f9fd)
- two/ref_axi_test can convert some 2D grids into axi-symmetric grids
  (with many caveats)

Thu Nov 17, 2011 : Released Refine 1.8.3

- package cleanup and include bootstrap

Mon Nov 7, 2011 : Released Refine 1.8.2

- to allow bootstrap outside of git repo

Wed Oct 26, 2011 : Released Refine 1.8.1 

- removed unused code.
- MesherX has been moved to a subdirectory and is no longer distributed
- started refine/two
- removed doc from distribution to eliminate texi2doc dependency
- unit tests work with ruby 1.9.2 (added '.' to load path)

Mon Jul 18, 2011 : Released Refine 1.8.0 (requires >= FUN3D-52844 (11.x.x)).

- fortran bindings extended for load balancing (gridgetmap_, 
   gridgetfreezestate_, and gridgetnaux_)

Thu Jul 7, 2011 : Released Refine 1.7.1 (requires >= FUN3D-52844 (11.x.x)).

- gridParallelPreProject only removes two and three face cells

Mon Apr 4, 2011 : Released Refine 1.7.0 (requires >= FUN3D-52844 (11.x.x)).

- This minor rev bump is an API change to elimiate global cell indexes and
    to restructure cell and face API for future mixed-element capability.
- compiled under Mac OS X
- pruned many unused methods

Fri Jan 21, 2011 : Released Refine 1.6.3 (requires >= FUN3D-45226 (11.0.0)).

- prevent NaN in volume node smoothing when faces are aligned. (was fixed
   for surface nodes Feb 7, 2005)

Thu Dec 23, 2010 : Released Refine 1.6.2 (requires >= FUN3D-45226 (11.0.0)).
