@@ -1,6 +1,8 @@
 
+- two unit tests activated by BUILD_EXECUTABLES AM switch to protect
+    mpi link in fun3d
 - two/axisymmetric can convert some 2D grids into axi-symmetric grids
-  (with many caveats)
+    (with many caveats)
 
 Tue Apr 17, 2012 : Released Refine 1.8.5
 
